[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/blue_bird/bluebird.gd" type="Script" id=1]
[ext_resource path="res://objects/blue_bird/bird.png" type="Texture" id=2]
[ext_resource path="res://objects/blue_bird/wing.png" type="Texture" id=3]

[sub_resource type="Animation" id=3]
resource_name = "eat"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 22.0308, -24.3144, -10.12, -22.2732, 22.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "fly"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bird/wing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -29.274, 39.6137, -29.274 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 51.3304

[node name="bluebird" type="Area2D"]
rotation = -0.235973
script = ExtResource( 1 )

[node name="bird" type="Sprite" parent="."]
position = Vector2( 172.548, -51.348 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( -342.03, 16.2154 )

[node name="wing" type="Sprite" parent="bird"]
position = Vector2( -372.722, 5.32657 )
rotation = -0.510928
texture = ExtResource( 3 )
offset = Vector2( 59.5147, 0.387566 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "eat"
anims/eat = SubResource( 3 )
anims/fly = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.03484, -44.6283 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.23324, -38.6039 )
scale = Vector2( 5.03521, 5.23912 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="." to="." method="_on_bluebird_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
